# nn

./: README.md
breast_cancer/: .gitignore  CMakeLists.txt  README.md  breast_cancer.c  data_format.c  data_format.h  test_data.c  train_cv_data.c
breast_cancer/data/: breast-cancer-wisconsin.data.shuffled.txt
breast_cancer/octave/: breast-cancer-octave.txt  script.m
optdigits/: .gitignore  CMakeLists.txt  README.md  file_callback.c  file_callback.h  optdigits.c
splice/: CMakeLists.txt  README.md  test_data.c  train_cv_data.c  util.c  util.h
splice/data/: splice.cv  splice.data.shuf.txt  splice.test  splice.train
vhse/: CMakeLists.txt  README.md  precision_recall.c  precision_recall.h  test_data.c  train_cv_data.c
